Add a right paddle to the pinball app.
It doesn't work very well considering the back of the paddle is on the
wrong side.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,8 @@
    can draw triangles directly.
 
 * [pinball] 
+ - Fix issues with ball colliding behind paddle.
+   Possibly by requiring paddles be more than just lines?
  - Design a relatively complete traditional pinball play field I can use to
    exercise everything of what I expect I may want to support.
  - Figure out how to deal with imprecision in test.
