--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,8 @@
    can draw triangles directly.
 
 * [pinball] 
+ - Fix performance issue with recomputing edge length and normal vector all
+   the time.
  - Fix issues with ball colliding behind paddle.
    Possibly by requiring paddles be more than just lines?
  - Design a relatively complete traditional pinball play field I can use to
