--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
-* [lib] Move Core modules to Core directory.
- In preparation for being able to build a core package separately.
- Digits, Undef, Iter
- Looks like Loop and Maybe not required.
+* [lib] Set up build to only have access to explicit package list?
 
 * [lang] Rewrite abstract types feature again.
  - brainstorm concrete syntax.
