Test new concrete syntax proposal for abstract types.
By stubbing out the syntax entries in the parser and verifying we don't
get any parse conflicts.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,14 @@
 * [lib] Set up build to only have access to explicit package list?
 
 * [lang] Rewrite abstract types feature again.
- - brainstorm concrete syntax.
  - update language spec.
  - update spec tests.
- - update implementation.
- - update programs.
+ - replace abstract token type with package type.
+   After this everything should compile again.
+ - add abstract access and abstract value and tests for those.
 
 * [modules]
+ - Decide about .fble.@ files.
  - Split FbleLoad into FbleLoadProgram and FbleLoadModule.
  - Add support for loading .fble.@ files.
    And presumably some way to test this and something about it in the language
