Revise language spec for new abstract types spec.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 * [lib] Set up build to only have access to explicit package list?
 
 * [lang] Rewrite abstract types feature again.
- - update language spec.
- - update spec tests.
- - replace abstract token type with package type.
+ - Update test directories given new chapter numbering.
+ - Update spec tests.
+ - Replace abstract token type with package type.
    After this everything should compile again.
- - add abstract access and abstract value and tests for those.
+ - Add abstract access and abstract value and tests for those.
 
 * [modules]
  - Decide about .fble.@ files.
