--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 * [lib] Set up build to only have access to explicit package list?
+* Reorder case statements to match updated order of *_EXPR enum.
 
 * [lang] Rewrite abstract types feature again.
- - Add abstract access and abstract value and tests for those.
+ - Test and add support for abstract value expression.
 
 * [lang] Should empty path be allowed in package type?
  See langs/fble.txt for more details.
