Reorganize fble-deps implementation.
Track dependencies in FbleLoad instead of reconstructing them from the
loaded program. This way we don't have to duplicate the search logic in
case of multiple entries in the search path, we can add dependency
generation as part of other tools such as fble-compile instead of
requiring a separate pass, and we can improve the list of dependencies
later on to include more details about directories searched.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * [lib] Set up build to only have access to explicit package list
- - Update approach to fble-deps to support multiple search paths.
+ - Pass search path to tools using -I option.
  - Reorganize prgms into package directories
    pkgs/core/Core/...
    pkgs/stdio/Stdio/...
@@ -12,6 +12,12 @@
 
 * [lang] Should empty path be allowed in package type?
  See langs/fble.txt for more details.
+
+* Should fble-deps be a side effect of other tools instead of a separate
+  executable?
+  It seems silly and potentially incorrect to run fble-deps as a separate
+  tool. What about making it a general option for all the fble related tools
+  that load modules? Particularly once we start loading separate .@ files.
 
 * [modules]
  - Decide about .fble.@ files.
