Remove $::test from build.ninja.tcl.
Output .tr files in directory mirroring source directory instead.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * Remove explicit out subdirectories from build system.
  Mirror the source directories instead.
+ Remove $::bin, $::lib, and $::cov variables.
 
 * Clean up option parsing for the rest of the executables.
  - Get rid of FbleMain?
