--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* Make fble-stdio.c a library function instead of executable.
+
 * Clean up option parsing for the rest of the executables.
  - Get rid of FbleMain?
  - Clean up command line argument parsing for all binaries using FbleMain.
